--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -61,7 +61,8 @@
 	</div>
 	<div class="header__catalog catalog-header">
 		<div class="catalog-header__container">
-			<nav class="catalog-header__menu menu-catalog">
+			<nav class="catalog-header__menu menu-catalog ">
+				<button type="button" class="menu-catalog__back _icon-back">Назад</button>
 				<ul class="menu-catalog__list">
 					<li class="menu-catalog__item"><button data-parent="1" class="menu-catalog__link">Каталог ножей</button>
 					</li>
@@ -72,6 +73,7 @@
 					<li class="menu-catalog__item"> <a href="" class="menu-catalog__link">Сопуствующие товары </a></li>
 				</ul>
 				<div class="menu-catalog__sub-menu sub-menu-catalog">
+					<button type="button" class="sub-menu-catalog__back _icon-back">Назад</button>
 					<div class="sub-menu-catalog__container">
 						<div hidden data-submenu="1" class="sub-menu-catalog__block ">
 							<div class="sub-menu-catalog__category">
@@ -265,7 +267,6 @@
 						</div>
 					</div>
 				</div>
-		</div>
 		</nav>
 	</div>
 	</div>
