create product page(swiper-perallax, tippy, card slider

--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,53 @@
 							<div class="main-block__swiper">
 								<div class="main-block__slide slide-main-block">
 									<div class="slide-main-block__content">
-										<h2 class="slide-main-block__title">Интернет магазин сертифицированных</h2>
-										<div class="slide-main-block__subtitle">златоустовских ножей</div>
-										<div class="slide-main-block__text">Добро пожаловать на официальный сайт «ЗЛАТМАКС»! В
+										<h2 data-swiper-perallax="-100" class="slide-main-block__title">Интернет магазин
+											сертифицированных</h2>
+										<div data-swiper-perallax="-150" class="slide-main-block__subtitle">златоустовских ножей
+										</div>
+										<div data-swiper-perallax="-200" class="slide-main-block__text">Добро пожаловать на
+											официальный сайт «ЗЛАТМАКС»! В
 											нашем магазине
 											представлен наиболее широкий выбор Златоустовских ножей от Златоустовских
 											Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
 										</div>
 									</div>
-									<a href="" class="slide-main-block__button button">Подробнее</a>
+									<a href="" data-swiper-perallax="-200" class="slide-main-block__button button">Подробнее</a>
+								</div>
+								<div class="main-block__slide slide-main-block">
+									<div class="slide-main-block__content">
+										<h2 data-swiper-perallax="-100" class="slide-main-block__title">Интернет магазин
+											сертифицированных</h2>
+										<div data-swiper-perallax="-150" class="slide-main-block__subtitle">златоустовских ножей
+										</div>
+										<div data-swiper-perallax="-200" class="slide-main-block__text">Добро пожаловать на
+											официальный сайт «ЗЛАТМАКС»! В
+											нашем магазине
+											представлен наиболее широкий выбор Златоустовских ножей от Златоустовских
+											Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
+										</div>
+									</div>
+									<a href="" data-swiper-perallax="-200" class="slide-main-block__button button">Подробнее</a>
+								</div>
+								<div class="main-block__slide slide-main-block">
+									<div class="slide-main-block__content">
+										<h2 data-swiper-perallax="-100" class="slide-main-block__title">Интернет магазин
+											сертифицированных</h2>
+										<div data-swiper-perallax="-150" class="slide-main-block__subtitle">златоустовских ножей
+										</div>
+										<div data-swiper-perallax="-200" class="slide-main-block__text">Добро пожаловать на
+											официальный сайт «ЗЛАТМАКС»! В
+											нашем магазине
+											представлен наиболее широкий выбор Златоустовских ножей от Златоустовских
+											Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
+										</div>
+									</div>
+									<a href="" data-swiper-perallax="-200" class="slide-main-block__button button">Подробнее</a>
 								</div>
 							</div>
 							<div class="main-block__controll controll-main-block">
-								<div class="controll-main-block__dots"></div>
-								<div class="controll-main-block__ fraction-controll">
+								<div class="controll-main-block__dotts"></div>
+								<div class="controll-main-block__fraction fraction-controll">
 									<span class="fraction-controll__current">0</span> / <span
 										class="fraction-controll__all">0</span>
 								</div>
@@ -81,6 +114,121 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__catalog-cards catalog-cards">
+				<div class="catalog-cards__container">
+					<div class="catalog-cards__item item-catalog-cards">
+						<div class="item-catalog-cards__body">
+							<h3 class="item-catalog-cards__title">
+								<a href="" class="item-catalog-cards__link-title">Каталог ножей</a>
+							</h3>
+							<ul class="item-catalog-cards__list">
+								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
+								</li>
+								<li class="item-catalog-cards__item"> <a href=""
+										class="item-catalog-cards__link">Туристические</a></li>
+								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
+								</li>
+							</ul>
+						</div>
+						<div class="item-catalog-cards__image">
+							<img src="@img/mainpage/catalog-cards/01.jpg" alt="knife">
+						</div>
+					</div>
+					<div class="catalog-card__item item-catalog-cards">
+						<div class="item-catalog-cards__body">
+							<h3 class="item-catalog-cards__title">
+								<a href="" class="item-catalog-cards__link-title">Среднеклинковое оружие </a>
+							</h3>
+							<ul class="item-catalog-cards__list">
+								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
+								</li>
+								<li class="item-catalog-cards__item"> <a href=""
+										class="item-catalog-cards__link">Туристические</a></li>
+								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
+								</li>
+							</ul>
+						</div>
+						<div class="item-catalog-cards__image">
+							<img src="@img/mainpage/catalog-cards/02.jpg" alt="knife">
+						</div>
+					</div>
+					<div class="catalog-card__item item-catalog-cards">
+						<div class="item-catalog-cards__body">
+							<h3 class="item-catalog-cards__title">
+								<a href="" class="item-catalog-cards__link-title">Длинноклинковое оружие</a>
+							</h3>
+							<ul class="item-catalog-cards__list">
+								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
+								</li>
+								<li class="item-catalog-cards__item"> <a href=""
+										class="item-catalog-cards__link">Туристические</a></li>
+								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
+								</li>
+							</ul>
+						</div>
+						<div class="item-catalog-cards__image">
+							<img src="@img/mainpage/catalog-cards/03.jpg" alt="knife">
+						</div>
+					</div>
+					<div class="catalog-card__item item-catalog-cards">
+						<div class="item-catalog-cards__body">
+							<h3 class="item-catalog-cards__title">
+								<a href="" class="item-catalog-cards__link-title"> Сувенирные изделия</a>
+							</h3>
+							<ul class="item-catalog-cards__list">
+								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
+								</li>
+								<li class="item-catalog-cards__item"> <a href=""
+										class="item-catalog-cards__link">Туристические</a></li>
+								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
+								</li>
+							</ul>
+						</div>
+						<div class="item-catalog-cards__image">
+							<img src="@img/mainpage/catalog-cards/04.jpg" alt="knife">
+						</div>
+					</div>
+					<div class="catalog-card__item item-catalog-cards">
+						<div class="item-catalog-cards__body">
+							<h3 class="item-catalog-cards__title">
+								<a href="" class="item-catalog-cards__link-title"> Сопутствующие товары</a>
+							</h3>
+							<ul class="item-catalog-cards__list">
+								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
+								</li>
+								<li class="item-catalog-cards__item"> <a href=""
+										class="item-catalog-cards__link">Туристические</a></li>
+								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
+								</li>
+							</ul>
+						</div>
+						<div class="item-catalog-cards__image">
+							<img src="@img/mainpage/catalog-cards/05.jpg" alt="knife">
+						</div>
+					</div>
+					<div class="catalog-card__item item-catalog-cards">
+						<div class="item-catalog-cards__body">
+							<h3 class="item-catalog-cards__title">
+								<a href="" class="item-catalog-cards__link-title">Ножевая мастерская</a>
+							</h3>
+							<ul class="item-catalog-cards__list">
+								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
+								</li>
+								<li class="item-catalog-cards__item"> <a href=""
+										class="item-catalog-cards__link">Туристические</a></li>
+								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
+								</li>
+							</ul>
+						</div>
+						<div class="item-catalog-cards__image">
+							<img src="@img/mainpage/catalog-cards/06.jpg" alt="knife">
+						</div>
+					</div>
+				</div>
+			</section>
+			@@include('html/_products-slider.htm',{
+			"title":"Хиты продаж"
+			})
 		</div>
 		@@include('html/_footer.htm',{})
 	</div>
