create product-cards page, footer

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
-		<div class="page page_home">
+		<main class="page page_home">
 			<section class="page__main-block main-block">
 				<div class="main-block__container">
 					<div class="main-block__body">
@@ -226,10 +226,134 @@
 					</div>
 				</div>
 			</section>
-			@@include('html/_products-slider.htm',{
-			"title":"Хиты продаж"
-			})
-		</div>
+			<section class="page__hits-product hits-product">
+				@@include('html/_products-slider.htm',{
+				"title":"Хиты продаж",
+				"moretext":"Перейти в каталог"
+				})
+			</section>
+			<section class="page__new-products new-products">
+				@@include('html/_products-new.htm',{
+				"title":"Новинки"
+				})
+			</section>
+			<section class="page__sale-products sale-products sale-products_no-bottom">
+				@@include('html/_products-slider.htm',{
+				"title":"Акции",
+				"moretext":"Все акции"
+				})
+			</section>
+			<section class="page__sale-products sale-products">
+				@@include('html/_products-slider.htm',{
+				"title":"Акции",
+				"moretext":"Все акции"
+				})
+			</section>
+			<section class="page__new-products new-products new-products_no-top">
+				@@include('html/_products-new.htm',{
+				"title":"Новинки"
+				})
+			</section>
+			<section class="page__sale-products sale-products sale-products_no-bottom">
+				@@include('html/_products-slider.htm',{
+				"title":"Акции",
+				"moretext":"Все акции"
+				})
+			</section>
+			<section class="page__sale-products sale-products">
+				@@include('html/_products-slider.htm',{
+				"title":"Акции",
+				"moretext":"Все акции"
+				})
+			</section>
+			<section class="page__articles-module articles-module">
+				<div class="articles-module__container">
+					<h2 class="articles-module__title">Наши статьи</h2>
+					<div class="articles-module__items">
+						<article class="articles-module__item item-article">
+							<a href="" class="item-article__image-ibg">
+								<img src="@img/articles-module/01.jpg" alt="knife">
+							</a>
+							<div class="item-article__body">
+								<h4 class="item-article__title">
+									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
+								</h4>
+								<div class="item-article__date">24.07.2019</div>
+							</div>
+						</article>
+						<article class="articles-module__item item-article">
+							<a href="" class="item-article__image-ibg">
+								<img src="@img/articles-module/02.jpg" alt="knife">
+							</a>
+							<div class="item-article__body">
+								<h4 class="item-article__title">
+									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
+								</h4>
+								<div class="item-article__date">24.07.2019</div>
+							</div>
+						</article>
+						<article class="articles-module__item item-article">
+							<a href="" class="item-article__image-ibg">
+								<img src="@img/articles-module/03.jpg" alt="knife">
+							</a>
+							<div class="item-article__body">
+								<h4 class="item-article__title">
+									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
+								</h4>
+								<div class="item-article__date">24.07.2019</div>
+							</div>
+						</article>
+						<article class="articles-module__item item-article">
+							<a href="" class="item-article__image-ibg">
+								<img src="@img/articles-module/04.jpg" alt="knife">
+							</a>
+							<div class="item-article__body">
+								<h4 class="item-article__title">
+									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
+								</h4>
+								<div class="item-article__date">24.07.2019</div>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+			<section class="page__products-block  products-block">
+				<div class="products-block__container">
+					<div class="products-block__item product-block">
+						<div class="product-block__body">
+							<h4 class="product-block__title">
+								<a href="" class="product-block__link-title">Тактические фонари</a>
+							</h4>
+							<div class="product-block__text">Тактический фонарь для разной деятельности: авто, рыбалка,
+								охота </div>
+							<a href="" class="product-block__button button">Подробнее</a>
+							<div class="product-block__image">
+								<img src="@img/products-block/01.jpg" alt="knife">
+							</div>
+						</div>
+					</div>
+					<div class="products-block__item product-block">
+						<div class="product-block__body">
+							<h4 class="product-block__title">
+								<a href="" class="product-block__link-title">Палобные мультифонари</a>
+							</h4>
+							<div class="product-block__text">Палобные мультифонари для разной деятельности: авто, рыбалка,
+								охота</div>
+							<a href="" class="product-block__button button">Подробнее</a>
+							<div class="product-block__image">
+								<img src="@img/products-block/02.jpg" alt="knife">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="page__hits-product hits-product">
+				@@include('html/_products-slider.htm',{
+				"title":"Фонари",
+				"moretext":"Перейти в каталог"
+				})
+			</section>
+		</main>
 		@@include('html/_footer.htm',{})
 	</div>
 	@@include('html/_popup.htm',{})
