create tabs, filter and finish adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -1,363 +1,181 @@
 <!DOCTYPE html>
-<html lang="ru">
-@@include('html/_head.htm',{
-"title":"Главная"
-})
+<html>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Верстка «NEW_PROJECT_NAME»</title>
+</head>
 
 <body>
-	<div class="wrapper">
-		@@include('html/_header.htm',{})
-		<main class="page page_home">
-			<section class="page__main-block main-block">
-				<div class="main-block__container">
-					<div class="main-block__body">
-						<div class="main-block__slider">
-							<div class="main-block__swiper">
-								<div class="main-block__slide slide-main-block">
-									<div class="slide-main-block__content">
-										<h2 data-swiper-perallax="-100" class="slide-main-block__title">Интернет магазин
-											сертифицированных</h2>
-										<div data-swiper-perallax="-150" class="slide-main-block__subtitle">златоустовских ножей
-										</div>
-										<div data-swiper-perallax="-200" class="slide-main-block__text">Добро пожаловать на
-											официальный сайт «ЗЛАТМАКС»! В
-											нашем магазине
-											представлен наиболее широкий выбор Златоустовских ножей от Златоустовских
-											Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
-										</div>
-									</div>
-									<a href="" data-swiper-perallax="-200" class="slide-main-block__button button">Подробнее</a>
-								</div>
-								<div class="main-block__slide slide-main-block">
-									<div class="slide-main-block__content">
-										<h2 data-swiper-perallax="-100" class="slide-main-block__title">Интернет магазин
-											сертифицированных</h2>
-										<div data-swiper-perallax="-150" class="slide-main-block__subtitle">златоустовских ножей
-										</div>
-										<div data-swiper-perallax="-200" class="slide-main-block__text">Добро пожаловать на
-											официальный сайт «ЗЛАТМАКС»! В
-											нашем магазине
-											представлен наиболее широкий выбор Златоустовских ножей от Златоустовских
-											Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
-										</div>
-									</div>
-									<a href="" data-swiper-perallax="-200" class="slide-main-block__button button">Подробнее</a>
-								</div>
-								<div class="main-block__slide slide-main-block">
-									<div class="slide-main-block__content">
-										<h2 data-swiper-perallax="-100" class="slide-main-block__title">Интернет магазин
-											сертифицированных</h2>
-										<div data-swiper-perallax="-150" class="slide-main-block__subtitle">златоустовских ножей
-										</div>
-										<div data-swiper-perallax="-200" class="slide-main-block__text">Добро пожаловать на
-											официальный сайт «ЗЛАТМАКС»! В
-											нашем магазине
-											представлен наиболее широкий выбор Златоустовских ножей от Златоустовских
-											Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
-										</div>
-									</div>
-									<a href="" data-swiper-perallax="-200" class="slide-main-block__button button">Подробнее</a>
-								</div>
-							</div>
-							<div class="main-block__controll controll-main-block">
-								<div class="controll-main-block__dotts"></div>
-								<div class="controll-main-block__fraction fraction-controll">
-									<span class="fraction-controll__current">0</span> / <span
-										class="fraction-controll__all">0</span>
-								</div>
-							</div>
-						</div>
-						<div class="main-block__media media-main-block">
-							<div class="media-main-block__body">
-								<div class="media-main-block__image">
-									<img src="@img/mainpage//main-block/image.png" alt="Knife">
-								</div>
-								<div class="media-main-block__tips">
-									<div data-tippy-content="Подсказка" class="media-main-block__tip media-main-block__tip_1">
-										<span>+</span>
-									</div>
-									<div data-tippy-content="Подсказка" class="media-main-block__tip media-main-block__tip_2">
-										<span>+</span>
-									</div>
-									<div data-tippy-content="Подсказка" class="media-main-block__tip media-main-block__tip_3">
-										<span>+</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="main-block__advantures advantures-main">
-						<div class="advantures-main__item">
-							<div class="advantures-main__icon">
-								<img src="@img/mainpage/main-block/icons/01.svg" alt="Возврат">
-							</div>
-							<div class="advantures-main__text">Гарантия 100% возврата денежных средств</div>
-						</div>
-						<div class="advantures-main__item">
-							<div class="advantures-main__icon">
-								<img src="@img/mainpage/main-block/icons/02.svg" alt="Доставка">
-							</div>
-							<div class="advantures-main__text">Доставка по Казахстану и Белоруссии</div>
-						</div>
-						<div class="advantures-main__item">
-							<div class="advantures-main__icon">
-								<img src="@img/mainpage/main-block/icons/03.svg" alt="Оформление">
-							</div>
-							<div class="advantures-main__text">Возможность оформление заказа без регистрации.</div>
-						</div>
-						<div class="advantures-main__item">
-							<div class="advantures-main__icon">
-								<img src="@img/mainpage/main-block/icons/04.svg" alt="Скидки">
-							</div>
-							<div class="advantures-main__text">Скидки постоянным покупателям.</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="page__catalog-cards catalog-cards">
-				<div class="catalog-cards__container">
-					<div class="catalog-cards__item item-catalog-cards">
-						<div class="item-catalog-cards__body">
-							<h3 class="item-catalog-cards__title">
-								<a href="" class="item-catalog-cards__link-title">Каталог ножей</a>
-							</h3>
-							<ul class="item-catalog-cards__list">
-								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
-								</li>
-								<li class="item-catalog-cards__item"> <a href=""
-										class="item-catalog-cards__link">Туристические</a></li>
-								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
-								</li>
-							</ul>
-						</div>
-						<div class="item-catalog-cards__image">
-							<img src="@img/mainpage/catalog-cards/01.jpg" alt="knife">
-						</div>
-					</div>
-					<div class="catalog-card__item item-catalog-cards">
-						<div class="item-catalog-cards__body">
-							<h3 class="item-catalog-cards__title">
-								<a href="" class="item-catalog-cards__link-title">Среднеклинковое оружие </a>
-							</h3>
-							<ul class="item-catalog-cards__list">
-								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
-								</li>
-								<li class="item-catalog-cards__item"> <a href=""
-										class="item-catalog-cards__link">Туристические</a></li>
-								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
-								</li>
-							</ul>
-						</div>
-						<div class="item-catalog-cards__image">
-							<img src="@img/mainpage/catalog-cards/02.jpg" alt="knife">
-						</div>
-					</div>
-					<div class="catalog-card__item item-catalog-cards">
-						<div class="item-catalog-cards__body">
-							<h3 class="item-catalog-cards__title">
-								<a href="" class="item-catalog-cards__link-title">Длинноклинковое оружие</a>
-							</h3>
-							<ul class="item-catalog-cards__list">
-								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
-								</li>
-								<li class="item-catalog-cards__item"> <a href=""
-										class="item-catalog-cards__link">Туристические</a></li>
-								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
-								</li>
-							</ul>
-						</div>
-						<div class="item-catalog-cards__image">
-							<img src="@img/mainpage/catalog-cards/03.jpg" alt="knife">
-						</div>
-					</div>
-					<div class="catalog-card__item item-catalog-cards">
-						<div class="item-catalog-cards__body">
-							<h3 class="item-catalog-cards__title">
-								<a href="" class="item-catalog-cards__link-title"> Сувенирные изделия</a>
-							</h3>
-							<ul class="item-catalog-cards__list">
-								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
-								</li>
-								<li class="item-catalog-cards__item"> <a href=""
-										class="item-catalog-cards__link">Туристические</a></li>
-								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
-								</li>
-							</ul>
-						</div>
-						<div class="item-catalog-cards__image">
-							<img src="@img/mainpage/catalog-cards/04.jpg" alt="knife">
-						</div>
-					</div>
-					<div class="catalog-card__item item-catalog-cards">
-						<div class="item-catalog-cards__body">
-							<h3 class="item-catalog-cards__title">
-								<a href="" class="item-catalog-cards__link-title"> Сопутствующие товары</a>
-							</h3>
-							<ul class="item-catalog-cards__list">
-								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
-								</li>
-								<li class="item-catalog-cards__item"> <a href=""
-										class="item-catalog-cards__link">Туристические</a></li>
-								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
-								</li>
-							</ul>
-						</div>
-						<div class="item-catalog-cards__image">
-							<img src="@img/mainpage/catalog-cards/05.jpg" alt="knife">
-						</div>
-					</div>
-					<div class="catalog-card__item item-catalog-cards">
-						<div class="item-catalog-cards__body">
-							<h3 class="item-catalog-cards__title">
-								<a href="" class="item-catalog-cards__link-title">Ножевая мастерская</a>
-							</h3>
-							<ul class="item-catalog-cards__list">
-								<li class="item-catalog-cards__item"><a href="" class="item-catalog-cards__link">Разделочные</a>
-								</li>
-								<li class="item-catalog-cards__item"> <a href=""
-										class="item-catalog-cards__link">Туристические</a></li>
-								<li class="item-catalog-cards__item"> <a href="" class="item-catalog-cards__link">Охотничьи</a>
-								</li>
-							</ul>
-						</div>
-						<div class="item-catalog-cards__image">
-							<img src="@img/mainpage/catalog-cards/06.jpg" alt="knife">
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="page__hits-product hits-product">
-				@@include('html/_products-slider.htm',{
-				"title":"Хиты продаж",
-				"moretext":"Перейти в каталог"
-				})
-			</section>
-			<section class="page__new-products new-products">
-				@@include('html/_products-new.htm',{
-				"title":"Новинки"
-				})
-			</section>
-			<section class="page__sale-products sale-products sale-products_no-bottom">
-				@@include('html/_products-slider.htm',{
-				"title":"Акции",
-				"moretext":"Все акции"
-				})
-			</section>
-			<section class="page__sale-products sale-products">
-				@@include('html/_products-slider.htm',{
-				"title":"Акции",
-				"moretext":"Все акции"
-				})
-			</section>
-			<section class="page__new-products new-products new-products_no-top">
-				@@include('html/_products-new.htm',{
-				"title":"Новинки"
-				})
-			</section>
-			<section class="page__sale-products sale-products sale-products_no-bottom">
-				@@include('html/_products-slider.htm',{
-				"title":"Акции",
-				"moretext":"Все акции"
-				})
-			</section>
-			<section class="page__sale-products sale-products">
-				@@include('html/_products-slider.htm',{
-				"title":"Акции",
-				"moretext":"Все акции"
-				})
-			</section>
-			<section class="page__articles-module articles-module">
-				<div class="articles-module__container">
-					<h2 class="articles-module__title">Наши статьи</h2>
-					<div class="articles-module__items">
-						<article class="articles-module__item item-article">
-							<a href="" class="item-article__image-ibg">
-								<img src="@img/articles-module/01.jpg" alt="knife">
-							</a>
-							<div class="item-article__body">
-								<h4 class="item-article__title">
-									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
-								</h4>
-								<div class="item-article__date">24.07.2019</div>
-							</div>
-						</article>
-						<article class="articles-module__item item-article">
-							<a href="" class="item-article__image-ibg">
-								<img src="@img/articles-module/02.jpg" alt="knife">
-							</a>
-							<div class="item-article__body">
-								<h4 class="item-article__title">
-									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
-								</h4>
-								<div class="item-article__date">24.07.2019</div>
-							</div>
-						</article>
-						<article class="articles-module__item item-article">
-							<a href="" class="item-article__image-ibg">
-								<img src="@img/articles-module/03.jpg" alt="knife">
-							</a>
-							<div class="item-article__body">
-								<h4 class="item-article__title">
-									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
-								</h4>
-								<div class="item-article__date">24.07.2019</div>
-							</div>
-						</article>
-						<article class="articles-module__item item-article">
-							<a href="" class="item-article__image-ibg">
-								<img src="@img/articles-module/04.jpg" alt="knife">
-							</a>
-							<div class="item-article__body">
-								<h4 class="item-article__title">
-									<a href="" class="item-article__link-title">Все о ножах: как правильно выбрать</a>
-								</h4>
-								<div class="item-article__date">24.07.2019</div>
-							</div>
-						</article>
-					</div>
-				</div>
-			</section>
-			<section class="page__products-block  products-block">
-				<div class="products-block__container">
-					<div class="products-block__item product-block">
-						<div class="product-block__body">
-							<h4 class="product-block__title">
-								<a href="" class="product-block__link-title">Тактические фонари</a>
-							</h4>
-							<div class="product-block__text">Тактический фонарь для разной деятельности: авто, рыбалка,
-								охота </div>
-							<a href="" class="product-block__button button">Подробнее</a>
-							<div class="product-block__image">
-								<img src="@img/products-block/01.jpg" alt="knife">
-							</div>
-						</div>
-					</div>
-					<div class="products-block__item product-block">
-						<div class="product-block__body">
-							<h4 class="product-block__title">
-								<a href="" class="product-block__link-title">Палобные мультифонари</a>
-							</h4>
-							<div class="product-block__text">Палобные мультифонари для разной деятельности: авто, рыбалка,
-								охота</div>
-							<a href="" class="product-block__button button">Подробнее</a>
-							<div class="product-block__image">
-								<img src="@img/products-block/02.jpg" alt="knife">
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="page__hits-product hits-product">
-				@@include('html/_products-slider.htm',{
-				"title":"Фонари",
-				"moretext":"Перейти в каталог"
-				})
-			</section>
-		</main>
-		@@include('html/_footer.htm',{})
+	<div class="rootpage">
+		<h1>Верстка «NEW_PROJECT_NAME»</h1>
+		<div class="rootpage__info">
+			Особенности проекта
+		</div>
+		<h2>Готовые страницы:</h2>
+		<ol class="rootpage__list">
+			<li><a target="_blank" href="home.html">Главная</a></li>
+			<li><a target="_blank" href="catalog.html">Каталог</a></li>
+			<li><a target="_blank" href="product.html">Карточка товара</a></li>
+		</ol>
+		<h2>Попапы:</h2>
+		<ol class="rootpage__list">
+			<li><a target="_blank" href="home.html#"></a></li>
+		</ol>
+		<div class="rootpage__tnx">
+			<h2>Спасибо за заказ!</h2>
+			<p>Буду рад (а) хорошему отзыву.</p>
+			<p>Обращайтесь еще!</p>
+		</div>
+		<div class="rootpage__contacts">
+			<h2>Мои контакты:</h2>
+			<p>Почта: <a href="mailto:email@gmail.com">email@gmail.com</a></p>
+			<p>Телефон: <a href="tel:8800800800">8 800 800 800</a></p>
+			<p>Соц. сеть: <a href="">ссылка на соц. сеть</a></p>
+		</div>
 	</div>
-	@@include('html/_popup.htm',{})
-	@@include('html/_js.htm',{})
 </body>
+<style>
+	@charset "UTF-8";
+	@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap");
+
+	*,
+	*::before,
+	*::after {
+		padding: 0px;
+		margin: 0px;
+		border: 0px;
+		box-sizing: border-box;
+	}
+
+	html,
+	body {
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		min-width: 320px;
+		width: 100%;
+		color: #fff;
+		background-color: #5e5373;
+	}
+
+	body {
+		font-family: Montserrat;
+		font-size: 100%;
+		line-height: 1;
+		font-size: 1rem;
+	}
+
+	a {
+		text-decoration: underline;
+		color: #ebe691
+	}
+
+	a:visited {
+		text-decoration: underline;
+		color: #aaa768;
+	}
+
+	a:hover {
+		text-decoration: none;
+	}
+
+	ul li {
+		list-style: none;
+	}
+
+	img {
+		vertical-align: top;
+	}
+
+	.wrapper {
+		width: 100%;
+		min-height: 100%;
+		overflow: hidden;
+	}
+
+	.rootpage {
+		padding: 30px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	@media (max-width: 767px) {
+		.rootpage {
+			padding: 30px 15px;
+		}
+	}
+
+	h1 {
+		color: #ebe691;
+		font-size: 2.5rem;
+		margin: 0px 0px 1.25rem 0px;
+	}
+
+	@media (max-width: 767px) {
+		h1 {
+			font-size: 1.85rem;
+			margin: 0px 0px 1.25rem 0px;
+		}
+	}
+
+	h2 {
+		color: #ebe691;
+		font-size: 1.25rem;
+		margin: 0px 0px 1rem 0px;
+	}
+
+	@media (max-width: 767px) {
+		h2 {
+			font-size: 1.125rem;
+			margin: 0px 0px 1rem 0px;
+		}
+	}
+
+	.rootpage__info {
+		line-height: 140%;
+		margin: 0px 0px 1.5rem 0px;
+	}
+
+	.rootpage__list {
+		margin: 0px 0px 2.25rem 1.25rem;
+	}
+
+	.rootpage__list li:not(:last-child) {
+		margin: 0px 0px 15px 0px;
+	}
+
+	.rootpage__contacts,
+	.rootpage__tnx {
+		border-radius: 200px;
+		padding: 20px 65px;
+		line-height: 140%;
+	}
+
+	@media (max-width: 767px) {
+
+		.rootpage__contacts,
+		.rootpage__tnx {
+			border-radius: 40px;
+			padding: 20px;
+		}
+	}
+
+	.rootpage__contacts {
+		background: #32b5a4;
+
+	}
+
+	.rootpage__contacts a {
+		color: #ebe691;
+	}
+
+	.rootpage__tnx {
+		background: #c22d63;
+		margin: 0px 0px 1rem 0px;
+	}
+</style>
 
 </html>
