--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -15,16 +15,217 @@
 		<div class="footer__body body-footer">
 			<div class="body-footer__row">
 				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title">ИНФОРМАЦИЯ</button>
+							<div class="spollers-item-footer__body">
+								<nav class="menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link">Златоустовские ножи
+												в Киеве и Киевской области</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link">Ножевые стали</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link">О нас </a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link">Условия оплаты и доставки</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link">Политика конфиденциальности</a>
+										</li>
+									</ul>
+								</nav>
+							</div>
+						</div>
+					</div>
 
-					<div data-spollers class="spollers">
-						<div class="spollers__item">
-							<button type="button" data-spoller class="spollers__title">Заголовок спойлера</button>
-							<div class="spollers__body">Контент спойлера</div>
+				</div>
+				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title">СЛУЖБА ПОДДЕРЖКИ</button>
+							<div class="spollers-item-footer__body">
+								<nav class="menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link">Контактная информация</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Возврат товара</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Карта сайта </a>
+										</li>
+									</ul>
+								</nav>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title">ДОПОЛНИТЕЛЬНО</button>
+							<div class="spollers-item-footer__body">
+								<nav class="menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Подарочные сертификаты</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Партнеры</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Товары со скидкой </a>
+										</li>
+									</ul>
+								</nav>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title">ЛИЧНЫЙ КАБИНЕТ</button>
+							<div class="spollers-item-footer__body">
+								<nav class="menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Личный кабинет </a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> История заказов</a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Мои закладки </a>
+										</li>
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Рассылка новостей </a>
+										</li>
+									</ul>
+								</nav>
+							</div>
 						</div>
 					</div>
 
 				</div>
 			</div>
+			<div class="body-footer__row">
+				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title">КОНТАКТЫ</button>
+							<div class="spollers-item-footer__body">
+								<nav class="menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item">
+											<a href="tel:88007774967" class="menu-footer__link _icon-footer-phone"> 8 (800)
+												777-49-67</a>
+										</li>
+										<li class="menu-footer__item _icon-footer-calendar">
+											<div>
+												<p>Пн-Пт</p>
+												<p>7:00 - 16:00</p>
+											</div>
+										</li>
+										<li class="menu-footer__item _icon-location">
+											<div>
+												<p>Златоуст,</p>
+												<p>ул. Шоссейная</p>
+												<p>д. 1, офис «6Б»</p>
+											</div>
+										</li>
+										<li class="menu-footer__item">
+											<a href="mailto:info@zlatmax.ru" class="menu-footer__link _icon-footer-email">
+												info@zlatmax.ru </a>
+										</li>
+									</ul>
+								</nav>
+								<ul class="social-footer">
+									<li class="social-footer__item">
+										<a href="" class="social-footer__link">
+											<img src="@img//icons/social/facebook.png" alt="facebook">
+										</a>
+									</li>
+									<li class="social-footer__item">
+										<a href="" class="social-footer__link">
+											<img src="@img/icons/social/viber.png" alt="viber">
+										</a>
+									</li>
+									<li class="social-footer__item">
+										<a href="" class="social-footer__link">
+											<img src="@img/icons/social/telegram.png" alt="telegram">
+										</a>
+									</li>
+									<li class="social-footer__item">
+										<a href="" class="social-footer__link">
+											<img src="@img/icons/social/whatsapp.png" alt="whatsapp">
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title">ПОЛЕЗНЫЕ ССЫЛКИ</button>
+							<div class="spollers-item-footer__body">
+								<nav class="menu-footer">
+									<ul class="menu-footer__list">
+										<li class="menu-footer__item">
+											<a href="" class="menu-footer__link"> Способы оплаты и доставки</a>
+										</li>
+									</ul>
+								</nav>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title"> НАША ГАРАНТИЯ</button>
+							<div class="spollers-item-footer__body">
+								<div class="spollers-item-footer__text">Недовольны своей покупкой?
+									Вы можете вернуть ее в течении
+									30 дней с даты получения,
+									согласно <a href="">нашим правилам</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="body-footer__item item-footer">
+					<div data-spollers="767.98" class="item-footer__spollers spollers-item-footer">
+						<div class="spollers-item-footer__item">
+							<button type="button" data-spoller class="spollers-item-footer__title"> НОВОСТНАЯ РАССЫЛКА
+							</button>
+							<form action="#" class="spollers-item-footer__body footer-subscribe">
+								<label for="subscribe__input" class="footer-subscribe__label">Подпишитесь прямо сейчас!</label>
+								<div class="footer-subscribe__line">
+									<input id="subscribe__input" autocomplete="off" type="text" name="form[]" data-error="Ошибка"
+										data-required="email" placeholder="example@gmail.com" class="footer-subscribe__input">
+									<button type="submit" class="footer-subscribe__button _icon-spolersArow"></button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="body-footer__bottom">
+				<div class="body-footer__rules">Все материалы, размещенные на сайте, носят справочный характер и не являются
+					публичной офертой, определяемойположениями Статьи 437 Гражданского кодекса Российской Федерации.
+					При копировании материалов гиперссылка на www.zlatmax.ru обязательна!</div>
+				<div class="body-footer__copirite">Златоустовские ножи <span>www.zlatmax.ru ©</span></div>
+			</div>
 		</div>
-	</div>
 </footer>
